--- a/todobase/Views/Shared/_Layout.cshtml
+++ b/todobase/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    <partial name="_LoginPartial" />
     @RenderBody()
     
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
